# MPI_CUDA

./: CMakeLists.txt  CmakeList.txt  README.md  f.md  lab-a.c  lab-b.c  lab-c-1.c  lab-c-2.c  lab-d.cpp  lab-e.cpp  lab-f-1.cpp  lab-f-2.cpp  lab1.c  test.py
life3d/: CUDA实验.md  life3d.cu  life3d.exp  life3d_shared.cu  life3d_shared.exp  test.cu
